@@ -1,4 +1,0 @@
-
-<?php
-
-$sql[]="UPDATE `{$dbprefix}acces` SET `page` = '' WHERE `page` = 'planning/postes_cfg/modif.php';";
